author: Julian Blake Kongslie
build-type: Custom
cabal-version: >=1.8
data-dir: data
data-files:
  *.blocks
  *.tiles.bin
extra-source-files:
  data/Makefile
  data/*.blocks
  data/*.blocks.m4
  data/*.tiles.m4
license-file: LICENSE
license: MIT
maintainer: jblake@omgwallhack.org
name: pokemap
version: 0.1

executable generatemap
  build-depends:
    array,
    base,
    bytestring,
    deepseq,
    MonadRandom,
    monads-tf,
    parsec,
    random,
    random-shuffle,
    transformers
  hs-source-dirs: src
  main-is: GenerateMap.hs
  other-modules:
    Block
    Maze
    Paths_pokemap

executable rendermap
  build-depends:
    array,
    base,
    bytestring,
    cairo,
    deepseq
  hs-source-dirs: src
  main-is: RenderMap.hs

source-repository head
  type: git
  location: git://github.com/jblake/pokemap.git
  branch: master
